--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-ga": "^2.5.6",
+    "react-particles-js": "^2.4.2",
     "react-scripts": "2.1.2"
   },
   "scripts": {
